[package]
name = "simulation-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
litesvm = "0.8.1"
solana-client = "3.0.7"
solana-program = "3.0.0"
solana-sdk = { version = "3.0.0", features = ["dev-context-only-utils", "full"] }
solana-system-interface = "2.0.0"
uuid = { version = "1.18.1", features = ["v4"] }
