[package]
name = "simulation-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
base64 = "0.22.1"
bincode = "1.3"
chrono = "0.4.42"
litesvm = { version = "0.8.1", features = ["serde"] }
serde = "1.0.228"
solana-client = "3.0.7"
solana-program = "3.0.0"
solana-sdk = { version = "3.0.0", features = [
    "dev-context-only-utils",
    "full",
] }
solana-system-interface = "2.0.0"
spl-token = "8.0.0"
tokio = "1.48.0"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
tower = { version = "0.5.0", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
serde_json = "1.0"
http-body-util = "0.1"
